Handle deprecation notices